# putio-tui

./: .gitignore  README.md  api.py  app.py  pyproject.toml  release.sh
.github/workflows/: release.yml
