[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "putio-tui"
version = "0.3.1"
description = "A terminal UI client for put.io"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.40",
    "rich>=13.0",
]

[project.scripts]
putio-tui = "app:main"

[tool.setuptools]
py-modules = ["app", "api"]
